# ChangeLog for app-text/poppler
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.225 2010/02/21 16:43:56 grobian Exp $

  21 Feb 2010; Fabian Groffen <grobian@gentoo.org> poppler-0.12.4.ebuild,
  +files/poppler-0.12.4-nanosleep-rt.patch:
  Drop flag-o-matic ugly hack in favour of patch by upstream to solve
  Solaris -lrt problem

  19 Feb 2010; Fabian Groffen <grobian@gentoo.org> poppler-0.12.4.ebuild:
  make sure we link with -lrt on Solaris, problem reported upstream

*poppler-0.12.4 (18 Feb 2010)

  18 Feb 2010; Ben de Groot <yngwin@gentoo.org> +poppler-0.12.4.ebuild,
  +files/poppler-0.12.4-config.patch:
  Version bump

  16 Feb 2010; Ben de Groot <yngwin@gentoo.org> +poppler-0.12.3-r5.ebuild,
  +files/poppler-0.12.3-cairo-downscale.patch:
  Take 2 for cairo downscale patch from upstream, fixes bug 303817.

  16 Feb 2010; Ben de Groot <yngwin@gentoo.org> poppler-0.12.3-r3.ebuild,
  -poppler-0.12.3-r4.ebuild,
  -files/poppler-0.12.3-cairo-image-downscale.patch:
  Install docs (bug 305391). Remove revision with patch that breaks apps
  (bug 303817).

  13 Feb 2010; Fabian Groffen <grobian@gentoo.org>
  files/poppler-0.12.3-darwin-gtk-link.patch:
  reduce number of libs to link against for poppler-glib, inspired by
  upstream bug 26442

  11 Feb 2010; Ben de Groot <yngwin@gentoo.org> poppler-0.12.3-r3.ebuild,
  +files/poppler-0.12.3-config.patch:
  Add small patch for typo in configuration (bug 304407). Add ewarn to
  prompt users to recompile reverse dependencies (bug 304035).

  09 Feb 2010; Ben de Groot <yngwin@gentoo.org> -poppler-0.8.7.ebuild,
  poppler-0.12.3-r3.ebuild, poppler-0.12.3-r4.ebuild:
  Re-keyword 0.12.3 for ~mips with okay from Kumba. Drop no longer needed
  ancient version with okay from kolla for m68k.

*poppler-0.12.3-r4 (08 Feb 2010)

  08 Feb 2010; Ben de Groot <yngwin@gentoo.org>
  -files/poppler-0.6.1-xpdf-3.02pl2.patch,