@@ -8,8 +8,8 @@ AUX poppler-0.12.4-config.patch 3028 RMD160 5e0d0e51621eeb272d019990c526cbcef21c
 AUX poppler-0.12.4-nanosleep-rt.patch 1308 RMD160 473ccf2a4fc83762f8b17ab20da89af1a9a80566 SHA1 b1103fc1d310bdbbb3cfd1b9bc29d1bfdef9076b SHA256 57d366e46cad51ead796abf2beae33103187c811c1ae9af4a2750aa29c999ae7
 DIST poppler-0.12.3.tar.gz 1616883 RMD160 a8fd07ec4dc918cc17390a5236aff9a43e1f7253 SHA1 bce8b675fb7c22d507b1965efa7bd71d9ce09460 SHA256 7a4ffe6d2950c446c285700d3b2dc399540a27ce635dd712aff646f02f8dfbcc
 DIST poppler-0.12.4.tar.gz 1674400 RMD160 9c212ebb8fc3d4cbc532f1c826428cc4d195cb5b SHA1 306507e0fbf47736b456218618f043a216c263ef SHA256 2afa2a54bd4ccb09e92f82b64bcafa95d39a404a3b3db9d6a5fcad0e0229857a
-EBUILD poppler-0.12.3-r3.ebuild 2771 RMD160 b7b0f1b15a143c07cfe5e5e77907c0acb7bac62f SHA1 46b23904f3bce70be8c2f7cac24552ac1484c7e8 SHA256 6d4393e0f400acf3ec8d28cf8ffbdab6f12110f7aac449eb5feb71a91d734ab4
-EBUILD poppler-0.12.3-r5.ebuild 2839 RMD160 a3bb825214cc5e6dd510c086b36545874d97ec17 SHA1 80a1f78f8ef4c6093f95856fca38233253f7fe7c SHA256 f93c12566f743bc056e3f551ff46f25d3dff7fdc980ef2e86fb5d50cb91bd503
-EBUILD poppler-0.12.4.ebuild 2931 RMD160 70bfa135ec95fd42fc0f0eb1ae9a2b326b308fcc SHA1 a2bc45d26e33a97a97e23165cc22ba17d479f1c6 SHA256 d11454ca340239a286854f02cbd317911459683a7f135f1bc38e0d70dd062e71
-MISC ChangeLog 32082 RMD160 ef751fda77469f6b90ffc502c99af10d6f400112 SHA1 b02eeccf1438e638fb120150635d17e8c07a4d10 SHA256 c3ba172cd389173bb0d9f587631086bd41d9403530ea6bd229f5c464750a368b
+EBUILD poppler-0.12.3-r3.ebuild 2798 RMD160 cff94d54b4290fafe11d16b1ffd56b0104e7b39b SHA1 3ca019b2a41b8a5e14d2471ef73dee6b4758fe91 SHA256 2bffaada1b931e1b115ad0173ccf7ea29e94ee1a78a970daf8673df61fe5a563
+EBUILD poppler-0.12.3-r5.ebuild 2866 RMD160 27e5715b1d9ecd1d5af75bc88976566d11958114 SHA1 b9e481ecbe5a04e6a3f42783d139a60041916ee8 SHA256 00b846bc70c42a8e74ff5394a90c0e5c62b552dcf90d5dfe32535e307cfc4d53
+EBUILD poppler-0.12.4-r1.ebuild 2963 RMD160 8f204fcf3b2496d4088f8a5ba820e5098fd8b9ac SHA1 8ac7650287af76aec35b1fe8d75ee9576ccae9a1 SHA256 1538f4a09473db53e8bcb853956ccc771cffc53b887db65a55799d6d3e826c64
+MISC ChangeLog 32428 RMD160 0460c66f9dcf1a07766bd42a97a3efd3a37e117a SHA1 b2e75c292c163d09238f77c95bedc21e7c854f61 SHA256 309b641288e5d072648ae5002e230efec018ec108a47839f7ff5318e93df33f2
 MISC metadata.xml 565 RMD160 6a9e714721911707b23fb27535d64ab92c90a5f8 SHA1 ca7711ec7b7d2953310ae3b00ff2f447371c103f SHA256 ec946c05ddfa21325d7cb705cee3342f4a95a1d08b02f324e4bac36bfc479e0b
