@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/poppler-0.12.4.ebuild,v 1.3 2010/02/21 16:43:56 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/poppler-0.12.4-r1.ebuild,v 1.1 2010/03/16 12:18:00 ssuominen Exp $
 
 EAPI="2"
 
@@ -24,6 +24,7 @@ COMMON_DEPEND=">=media-libs/fontconfig-2.6.0
 			 >=x11-libs/gtk+-2.14.0:2 )
 	jpeg? ( >=media-libs/jpeg-7:0 )
 	jpeg2k? ( media-libs/openjpeg )
+	lcms? ( media-libs/lcms )
 	png? ( media-libs/libpng )
 	qt3? ( >=x11-libs/qt-3.3:3 )
 	qt4? ( x11-libs/qt-core:4
